# LLMTwin

./: .gitignore  README.md  pyproject.toml
notebooks/: hf_datasets.ipynb  hf_transformers.ipynb  mongodb_test.ipynb  qdrant_test.ipynb  unsloth.ipynb
script/: upload_raw_data.ipynb
src/llmtwin/: __init__.py  base.py  connection.py  finetune.py  mongodb_test.ipynb  nosql.py  qdrant_test.ipynb  settings.py  vector.py
src/llmtwin/domain/: chunk_document.py  cleaned_document.py  data_category.py  document.py  embed_document.py
src/llmtwin/domain/base/: __init__.py  nosql.py  vector.py
src/llmtwin/feature_engineering/: chunk_and_embed.py  clean.py
src/llmtwin/networks/: embeddings.py
src/llmtwin/preprocess/: chunk_func.py  chunk_handler.py  clean_handler.py  dispatcher.py  embed_handler.py
tests/: chunk_and_embed_test.ipynb  clean_test.ipynb  mongodb_test.ipynb  qdrant_test.ipynb
